feat(brand): enhance bulk operations with detailed failure reasons
- Add failedReasons map to BulkResult to provide specific error messages for each failed operation
- Update BulkDeleteBrandUseCase to include failure reason ("Brand not found or already deleted")
- Update BulkHardDeleteBrandUseCase to categorize failures by reason (products exist vs not found/not soft-deleted)
- Update BulkRestoreBrandUseCase to include failure reason ("Brand not found or not deleted")
- Replace rows.get(0) with rows.getFirst() for improved readability in BrandRepositoryImpl
- Remove unused Pageable import from ProductJpaRepository
- Enables clients to understand why specific brands failed during bulk operations instead of just counting failures